--- a/dynamic_bitset.html
+++ b/dynamic_bitset.html
@@ -8,6 +8,7 @@
               Copyright (c) 2003-2004, 2008 Gennaro Prota
                     Copyright (c) 2014 Ahmed Charles
                  Copyright (c) 2014 Riccardo Marcangelo
+                    Copyright (c) 2018 Evgeny Shulgin
 
        Distributed under the Boost Software License, Version 1.0.
           (See accompanying file LICENSE_1_0.txt or copy at
@@ -201,6 +202,7 @@ public:
     dynamic_bitset&amp; <a href="#set1">set</a>();
     dynamic_bitset&amp; <a href="#reset2">reset</a>(size_type n);
     dynamic_bitset&amp; <a href="#reset1">reset</a>();
+    dynamic_bitset&amp; <a href="#fill">fill</a>(size_type first, size_type last, bool val = true);
     dynamic_bitset&amp; <a href="#flip2">flip</a>(size_type n);
     dynamic_bitset&amp; <a href="#flip1">flip</a>();
     bool <a href="#test">test</a>(size_type n) const;
@@ -1081,6 +1083,18 @@ dynamic_bitset&amp; <a id="reset2">reset</a>(size_type n)
 
 <b>Precondition:</b> <tt>n &lt; this-&gt;size()</tt>.<br />
 <b>Effects:</b> Clears bit <tt>n</tt>.<br />
+<b>Returns:</b> <tt>*this</tt>
+
+<hr />
+<pre>
+dynamic_bitset&amp; <a id=
+"fill">fill</a>(size_type first, size_type last, bool val = true);
+</pre>
+
+<b>Precondition:</b> <tt>last &lt; this-&gt;size()</tt> and <tt>first &lt;= last</tt>.<br />
+<b>Effects:</b> Sets every bit indexed from <tt>first</tt> to
+<tt>last</tt> if <tt>val</tt> is <tt>true</tt>, and clears them
+if <tt>val</tt> is false</tt>. <br />
 <b>Returns:</b> <tt>*this</tt>
 
 <hr />
